--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "ant-design-vue": "^1.6.3",
     "axios": "0.18.1",
+    "echarts": "^4.8.0",
     "element-ui": "2.13.2",
     "esri-loader": "^2.14.0",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "v-echarts": "^1.0.2",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
@@ -39,6 +41,7 @@
     "babel-jest": "23.6.0",
     "chalk": "2.4.2",
     "connect": "3.6.6",
+    "echarts": "^4.8.0",
     "eslint": "5.15.3",
     "eslint-plugin-vue": "5.2.2",
     "html-webpack-plugin": "3.2.0",
@@ -50,6 +53,7 @@
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
+    "v-charts": "^1.19.0",
     "vue-template-compiler": "2.6.10"
   },
   "engines": {
